<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pkg_name">com.example.backend</string>
    <string name="app_name">Список покупок</string>
    
    <!-- fragment_storefront -->
    <string name="listview_empty">Ваш список товаров пуст</string>

    <!-- ID всех активити и фрагментов -->
    <string name="mainActivity">MainActivity</string>
    <string name="fragment_backend">MyFragmentBackend</string>
    <string name="fragment_navigation">MyFragmentNavigation</string>
    <string name="fragment_storefront">MyFragmentStorefront</string>
    <string name="fragment_universal">Fr_universal</string>
    <string name="fragment_dialog">Fr_element</string>
    <string name="fragment_pager">MyFragmentPager</string>

    <!-- Тексты кнопок в приложении -->
    <string name="btnAdd">Новый продукт</string>        
    <string name="btnCancel">Отменить</string>
    <string name="btnSave">Сохранить</string>
    <string name="btnDelete">Удалить</string>    

    <!-- Содержание текстовых элементов по-умолчанию -->
    <string name="tvMyList">Купить:</string>
    <string name="tvModelPager">Здесь отображается название товара</string>
   
    
    <!-- Фрагмент Storefront, меню -->
    <string name="save_into_templates">Сохранить как шаблон</string>
    <string name="load_from_templates">Загрузить из шаблонов</string>
    <string name="send_data">Отправить список...</string>
    <string name="clear_list">Очистить список</string>
    <string name="help_list">Помощь</string>
    <string name="exit_list">Выход</string>
    
    <string name="templates_create_dialog_title">Создание шаблона</string>
    <string name="templates_create_dialog_message">Введите имя шаблона</string>
    <string name="templates_negative_button_dialog">Отмена</string>
    <string name="templates_positive_button_dialog">ОК</string>
    <string name="templates_neutral_button_dialog">Удалить</string>        
    <string name="templates_load_dialog_title">Выбор шаблона</string>    
        
    <!-- Метки fragment_add_product -->
    <string name="dialogTitle">Продукты</string>
    <string name="modelName">Название</string>
    <string name="tvModelCategory">Категория</string>
    <string name="chkDeleteProduct">К удалению</string>
        
    <!-- item.xml -->
    <string name="tvModel_name">Товар</string>
       
    <!-- dialog_templates -->
    <string-array name="prototype_array_templates">
        <item >Шаблон 1</item>
        <item >Шаблон 2</item>
        <item >Ежедневный список</item>
        <item >Выходной список</item>
        <item >Праздничный список</item>
        <item >Список в поездку</item>
    </string-array>
    
</resources>